# arduino-mcp2515-firmata

./: .gitignore  CMakeLists.txt  README.md  mcp2515firmata.cpp
src/: SPI.h  mcp2515.cpp  mcp2515.h
